[package]
name = "advent-2019"
version = "0.1.0"
authors = ["Krishna Sundarram <krishna.sundarram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
once_cell = "1.2.0"
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3.0"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.8.2"
num = "0.2.0"
